# chatbot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  arlista.csv  docker-compose-dev.yml  docker-compose.yml  run.sh
frontend/: chatbot.html  script.js  styles.css
src/: actix_base.rs  db_model.rs  groq_chatbot.rs  lib.rs  main.rs  messages.rs  mongo.rs
