[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

# Dependencies for the project
[dependencies]
actix-web = { version = "4.0", features = ["rustls-0_23"] }
actix-cors = "0.7.0"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
mongodb = "3.1.0"
